--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
 RewriteEngine On
+
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.*)$ $1.html [L]
@@ -7,3 +12,10 @@ RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
 RewriteRule ^ %1 [R=301,L]
 
 RewriteRule ^index$ / [R=301,L]
+
+<FilesMatch "\.(css|js|jpg|jpeg|png|gif|ico)$">
+Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
+
+AddType text/css .css
+AddType application/javascript .js
